[package]
name = "anor-http"
version = "0.1.0"
edition = "2021"
authors = ["Sheroz Khaydarov"]
description = "Anor HTTP Service"
documentation = "https://docs.rs/anor-http"
readme = "README.md"
repository = "https://github.com/anor-rs/anor-http"
license = "MIT"
keywords = ["data", "store", "cache"]
categories = ["data-structures", "caching", "database", "filesystem"]
