[package]
name = "anor-common"
version = "0.1.0"
edition = "2021"
authors = ["Sheroz Khaydarov"]
description = "Anor Common Utilities"
documentation = "https://docs.rs/anor"
readme = "README.md"
repository = "https://github.com/anor-rs/anor-common"
license = "MIT"
keywords = ["data", "store", "cache"]
categories = ["data-structures", "caching", "database"]

[dependencies]
log = "0.4"
log4rs = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

