[package]
name = "anor-api"
version = "0.1.1"
edition = "2021"
authors = ["Sheroz Khaydarov"]
description = "Anor API Service"
documentation = "https://docs.rs/anor-api"
readme = "README.md"
repository = "https://github.com/anor-rs/anor"
license = "MIT"
keywords = ["api", "server", "network", "data", "cache"]
categories = ["data-structures", "caching", "database", "network-programming"]

[dependencies]
log = "0.4"
log4rs = "1.2"
prost = "0.12"
bytes = "1.5.0"

anor-utils = { path = "../anor-utils"}
anor-storage = { path = "../anor-storage"}

[build-dependencies]
prost-build = "0.12.1"

