[package]
name = "anor-api"
version = "0.1.1"
edition = "2021"
authors = ["Sheroz Khaydarov"]
description = "Anor API Service"
documentation = "https://docs.rs/anor-api"
readme = "README.md"
repository = "https://github.com/anor-rs/anor"
license = "MIT"
keywords = ["api", "server", "network", "data", "cache"]
categories = ["data-structures", "caching", "database", "network-programming"]

[dependencies]
tracing = "0.1"
prost = "0.12"
bytes = "1.5.0"

anor-utils = { path = "../anor-utils"}
anor-storage = { path = "../anor-storage"}

[build-dependencies]
prost-build = "0.12.1"

