[package]
name = "anor-http"
version = "0.1.1"
edition = "2021"
authors = ["Sheroz Khaydarov"]
description = "Anor HTTP Service"
documentation = "https://docs.rs/anor-http"
readme = "README.md"
repository = "https://github.com/anor-rs/anor"
license = "MIT"
keywords = ["data", "store", "cache"]
categories = ["data-structures", "caching", "database", "filesystem"]

[dependencies]
log = "0.4"
log4rs = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

hyper = { version = "1.0.0-rc.4", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
http = "0.2"
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
http-body-util = "0.1.0-rc.3"
bytes = "1"

http_common = "0.2.2"

anor-utils = "0.1"
anor-storage = "0.1"
