[package]
name = "anor-http"
version = "0.1.1"
edition = "2021"
authors = ["Sheroz Khaydarov"]
description = "Anor HTTP Service"
documentation = "https://docs.rs/anor-http"
readme = "README.md"
repository = "https://github.com/anor-rs/anor"
license = "MIT"
keywords = ["data", "store", "cache"]
categories = ["data-structures", "caching", "database", "filesystem"]

[dependencies]
tracing = "0.1"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
http = "1"
hyper-util = { version = "0.1", features = ["full"] }
futures-util = { version = "0.3", default-features = false }
http-body-util = "0.1"
bytes = "1"

http_common = "0.2.2"

anor-utils = { path = "../anor-utils" }
anor-storage = { path = "../anor-storage" }
