[package]
name = "anor-storage"
version = "0.1.3"
edition = "2021"
authors = ["Sheroz Khaydarov"]
description = "Anor In-Memory Data Storage"
documentation = "https://docs.rs/anor-storage"
readme = "README.md"
repository = "https://github.com/anor-rs/anor"
license = "MIT"
keywords = ["data", "store", "cache"]
categories = ["data-structures", "caching", "database"]

[dependencies]
log = "0.4"
log4rs = "1.2"
uuid = { version = "1.4.1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

bincode = "2.0.0-rc.3"
fs2 = "0.4"

anor-common = { git = "https://github.com/anor-rs/anor-common.git" }
