[package]
name = "anor-utils"
version = "0.1.4"
edition = "2021"
authors = ["Sheroz Khaydarov"]
description = "Anor Utilities"
documentation = "https://docs.rs/anor-utils"
readme = "README.md"
repository = "https://github.com/anor-rs/anor"
license = "MIT"
keywords = ["data", "store", "cache"]
categories = ["data-structures", "caching", "database"]

[dependencies]
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1.10"
